--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,13 +10,8 @@
     <color name="DividerColor">#FFE8E8E8</color>
     <color name="premium_yellow">#f6ff00</color>
     <color name="blacknot">#2d2d2d</color>
+    <color name="red_out">#ff3838</color>
 
 
-    <color name="FSQStrawberry">#E6092C</color>
-    <color name="FSQMacCheese">#FF6701</color>
-    <color name="FSQOrange">#FF9600</color>
-    <color name="FSQBanana">#ffc800</color>
-    <color name="FSQLime">#C5DE35</color>
-    <color name="FSQGuacamole">#73CF42</color>
-    <color name="FSQKale">#00b551</color>
+
 </resources>
